kludgy fix for topic dropdown dimensions
The issue here is that for some reason the dropdown doesn't get a good
width--it is no larger than its parent, and then loses some width to the
scroll bar. Ugly. This forces a fixed 270 px width. Not responsive.

--- a/css/index.css
+++ b/css/index.css
@@ -132,6 +132,18 @@ th.wide {
     background-color: #eee;
 }
 
+/* dropdown tweak */ 
+/* topic dropdown can fill whole height of screen */
+
+#topic_dropdown.scroll-menu {
+    position: fixed;
+    top: 0px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    max-height: 100%;
+    min-width: 270px;
+}
+
 
 #help_box_content p a {
     color: blue;
